<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="loginModel"
            type="com.rahmatofolio.mvp.data.LoginModel"/>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_title"
                    android:text="@string/hint_login"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_label"
                    android:text="@string/hint_enter_email_username"/>

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_form"
                    android:text="@={loginModel.username}"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_label"
                    android:text="@string/hint_enter_password"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_form"
                    android:inputType="textPassword"
                    android:text="@={loginModel.password}"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onClick}"
                    style="@style/btn_primary"
                    android:text="@string/hint_login"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/divider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tv_label_grey"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginEnd="@dimen/margin_16dp"
                        android:text="@string/hint_login_with"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/divider"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFacebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/btn_social"
                        android:onClick="@{listener::onClick}"
                        android:drawableStart="@drawable/ic_facebook"
                        android:drawablePadding="@dimen/margin_16dp"
                        android:layout_marginEnd="@dimen/margin_4dp"
                        android:text="@string/facebook"/>

                    <TextView
                        android:id="@+id/tvGoogle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/btn_social"
                        android:onClick="@{listener::onClick}"
                        android:drawableStart="@drawable/ic_google"
                        android:drawablePadding="@dimen/margin_16dp"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:text="@string/google"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tv_label_grey"
                        android:text="@string/hint_not_have_account"/>

                    <TextView
                        android:id="@+id/tvSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{listener::onClick}"
                        style="@style/tv_action_primary_strong"
                        android:text="@string/hint_signup_now"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onClick}"
                    style="@style/tv_action_primary"
                    android:layout_gravity="center"
                    android:text="@string/hint_forgot_pass"/>

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>