<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forgotModel"
            type="com.rahmatofolio.mvp.data.ForgotModel"/>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input_title"
                android:text="Forgot Password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input_label"
                android:text="@string/hint_enter_email"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input_form"
                android:text="@={forgotModel.email}"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{listener::onClick}"
                style="@style/btn_primary"
                android:text="Submit"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/tv_label_grey"
                    android:text="@string/hint_have_account"/>

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onClick}"
                    style="@style/tv_action_primary_strong"
                    android:text="@string/hint_login"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>